@@ -9,6 +9,8 @@ Changes in version 1.11
 - Modified the check-fqdn plugin to append $DEFAULTHOST and
   $DEFAULTDOMAIN to addresses if necessary.
 
+- Added a separate connect timeout to the ClamAV plugin.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
